<resources>
    <string name="app_name">Just Read</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_genre">GenreActivity</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_setttings">Options</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_search">Result</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_fragment_catalog">Catalog</string>
    <string name="title_fragment_borrowed">Borrowing</string>
    <string name="title_fragment_history">History</string>
    <string name="title_fragment_favourite">Favourite</string>
    <string name="drawer_catalog">Catalog</string>
    <string name="drawer_borrowed">Borrowing</string>
    <string name="drawer_history">History</string>
    <string name="drawer_favoutite">Favourites</string>
    <string name="drawer_option">Options</string>
    <string name="drawer_contact">Contacts</string>
    <string name="drawer_about">About us</string>
    <string name="drawer_logout">Log out</string>
    <string name="drawer_profile">Profile</string>
    <string name="library_nav">Library</string>
    <string name="application_nav">Application</string>
    <string name="profile_nav">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_share">Share book</string>
    <string name="genre_home_and_garden">Home</string>
    <string name="genre_computer_and_tecnology">Computer and tecnology</string>
    <string name="genre_kitchen_and_food">Kitchen and food</string>
    <string name="genre_economy">Economy</string>
    <string name="genre_sience_fiction">Sience fiction</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_detective_story_thriller">Detective story and thriller</string>
    <string name="genre_books_for_children">Books for children</string>
    <string name="genre_fiction_and_literature">Fiction and literature</string>
    <string name="genre_policy_and_current_events">Policy and current events</string>
    <string name="genre_religion">Religion</string>
    <string name="genre_romance_novel">Romance novel</string>
    <string name="genre_health_and_fitness">Health and fitness</string>
    <string name="genre_sport">Soprt</string>
    <string name="genre_history">History</string>
    <string name="genre_travel">Travel</string>
    <string name="book_cover">book cover</string>
    <string name="book_title">book title</string>
    <string name="book_author">book author</string>
    <string name="genre_icon">category image</string>
    <string name="rating_star">rating star</string>
    <string name="default_rate">4.5</string>
    <string name="default_end_date">21 / 12 / 2012   –   02 / 01 / 2018</string>
    <string name="catalog_genre_cover">catalog category cover</string>
    <string name="profile_image">prfile image</string>
    <string name="fab_book">Book</string>
    <string name="fab_send_home">Send home</string>
    <string name="fab_extend_loan">Extend loan</string>
    <string name="fab_delivery_book">Delivery book</string>
    <string name="server_offline">The connection with the server has failed, check your network connection</string>
    <string name="connection_lost">Connection lost</string>
    <string name="go_to_option">GO TO OPTION</string>
    <string-array name="lists">
        <item>Italiano</item>
        <item>English</item>
    </string-array>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="calendar_sincro">Sincronize with calendar</string>
    <string name="sincro_title">Sincronize loan with Google calendar</string>
    <string name="choose_language">Choose language</string>
    <string name="language_settings">Language</string>
    <string name="fast_scroll">Fast scroll</string>
    <string name="fast_scroll_summary">Enable fast scrolling in vertical list</string>
    <string name="application_general">General</string>
    <string name="application_accessibility">Accessibility</string>
    <string name="item_default_title_book">Default title with multiple line.</string>
    <string name="item_default_title_author">Default author</string>
    <string name="default_library_name">Just Read</string>
    <string name="default_library_street">Via Pessinetto 19, TO </string>
    <string name="default_library_phone">3476681614</string>
    <string name="default_library_mail">justread.jr@flashmail.it</string>
    <string name="default_library_site">www.justRead.it</string>
    <string name="link_site">www.JustRead.com</string>
    <string name="more_info_about">More info about</string>
    <string name="genre_title">Categories</string>
    <string name="info_title">Info</string>
    <string name="plot_title">Plot</string>
    <string name="review_title1">Your review</string>
    <string name="review_title2">Reviews</string>
    <string name="default_user_name">Pippo user</string>
    <string name="default_user_review">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer a urna vitae ante commodo rutrum. Quisque ut diam nibh. Aenean.
    </string>
    <string name="show_more">SHOW MORE</string>
    <string name="publisher">Publisher</string>
    <string name="page">Pages</string>
    <string name="isbn">ISBN</string>
    <string name="language">Language</string>
    <string name="default_rate_expanded">4.5</string>
    <string name="default_number_voters">109</string>
    <string name="default_publisher">default publisher</string>
    <string name="default_page">1234</string>
    <string name="default_isbn">123456789123</string>
    <string name="default_language">English</string>
    <string name="default_name_surname">Name Surname</string>
    <string name="default_review_text">Rate this book</string>
    <string name="default_confirm">Confirm and send</string>
    <string name="default_suggestion_review">Let us know your opinion</string>
    <string name="change_image_profile">Change your profile image</string>
    <string name="modifier_button">modifier button</string>
    <string name="modified_review">Change your review</string>
    <string name="search_title">search</string>
    <string name="search_hint">search</string>
    <string name="profile_log">Notice Board</string>
    <string name="notice_board_sample">
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
        21/12/2017  10:55\n  You have share "Harry Potter"\n\n
        13/10/2017  21:00\n  You have borrowed "IT"\n\n
    </string>
    <string name="action_sign_in">Welcome to JustRead!</string>
    <string name="action_sign_in_btn">LOGIN</string>
    <string name="insert_email_here">Insert email here</string>
    <string name="insert_pwd_here">Insert password here</string>
    <string name="register">Don\'t have an account yet? </string>
    <string name="logo_aplication">logo_aplication</string>
    <string name="register_link"><u>Register</u></string>
</resources>