<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unito.di.justread.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        app:srcCompat="@mipmap/justread" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/action_sign_in"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/login_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/insert_email_here"/>

    <EditText
        android:id="@+id/password_input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_input_field"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/insert_pwd_here"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/register_link"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/register_link"
        android:textColor="@color/accent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_input_field"
        android:text="@string/action_sign_in_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/black"
        android:textSize="18sp"/>



</RelativeLayout>
