<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unito.di.justread.activities.ServerOfflineActivity">

    <TextView
        android:id="@+id/connection_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/connection_lost"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        android:padding="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/sorry_server_offline"
        android:layout_below="@id/connection_lost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/server_offline"
        android:padding="20dp"
        android:textAlignment="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/connection_lost"
        android:src="@drawable/ic_signal_wifi_off_black_24dp" />

    <Button
        android:id="@+id/go_to_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sorry_server_offline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/go_to_option"
        style="@style/Widget.AppCompat.Button.Colored"/>
</RelativeLayout>
