<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unito.di.justread.activities.ContatctActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/map_cardview_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/library_name_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_library_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black"
                        android:padding="5dp"
                        android:textAlignment="center"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="140dp"
                        android:src="@mipmap/justread"
                        android:layout_below="@id/library_name_contact"
                        android:contentDescription="@string/logo_aplication" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/general_info_cardview_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/map_cardview_contact"
                android:layout_margin="5dp"
                android:padding="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/library_street_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:text="@string/default_library_street"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/library_phone_contact"
                        android:layout_below="@id/library_street_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/default_library_phone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/fab_phone_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/library_phone_contact"
                        android:src="@drawable/ic_call_white_24dp"
                        fab:fab_colorNormal="@color/accent"
                        fab:fab_label="@string/fab_send_home"
                        fab:fab_size="mini"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/library_mail_contact"
                        android:layout_below="@id/library_phone_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/default_library_mail"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/fab_mail_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/library_mail_contact"
                        android:src="@drawable/ic_email_white_24dp"
                        fab:fab_colorNormal="@color/accent"
                        fab:fab_label="@string/fab_send_home"
                        fab:fab_size="mini"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/library_site_contact"
                        android:layout_below="@id/library_mail_contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="18dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/default_library_site"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/black" />

                    <com.github.clans.fab.FloatingActionButton
                        android:id="@+id/fab_site_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@+id/library_site_contact"
                        android:src="@drawable/ic_public_white_24dp"
                        fab:fab_colorNormal="@color/accent"
                        fab:fab_label="@string/fab_send_home"
                        fab:fab_size="mini"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_below="@id/more_info_about"
                        android:text="@string/link_site"
                        android:autoLink="web"
                        android:clickable="true"
                        android:linksClickable="true"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black"
                        android:focusable="true" />

                    <TextView
                        android:id="@+id/more_info_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_below="@id/library_site_contact"
                        android:text="@string/more_info_about"
                        android:padding="18dp"
                        android:autoLink="web"
                        android:clickable="true"
                        android:linksClickable="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/black"
                        android:focusable="true" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
